style.css
:root {
  --color-bg: rgb(10, 13, 18);
  --color-bg-secondary: rgb(15, 21, 33);
  --color-text-secondary: rgb(202, 255, 28);
  --color-primary: rgb(199, 202, 209);
  --color-secondary: rgb(30, 40, 56);
  --color-text: rgb(242, 242, 242);
}
html {
  scroll-behavior: smooth;
}

@import url("https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Days+One&family=Exo:ital,wght@0,800;1,800&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Orbitron:wght@400..900&family=Roboto+Slab:wght@100..900&display=swap");
body {
  /*font-family: "Days One", sans-serif;*/
  font-family: "Chakra Petch", sans-serif;
  background-color: var(--color-bg);
  overflow-x: hidden;
}

/*startNavbar*/
.navbar {
  background-color: var(--color-bg);
}
.fa-gamepad {
  color: var(--color-text-secondary);
  font-size: 20px;
}
.navbar-brand {
  color: var(--color-text-secondary);
  font-size: 20px;
}
.navbar-brand:hover {
  color: var(--color-text-secondary);
}
.navbar-toggler {
  border: transparent;
}
.nav-link {
  color: var(--color-text);
}
.nav-item .active {
  color: var(--color-text-secondary);
}
.nav-link:hover,
.nav-item:hover {
  color: var(--color-text-secondary);
}
.btn {
  background-color: var(--color-text-secondary);
  color: var(--color-bg-secondary);
}
.btn-sign {
  border-radius: 8px;
  margin-right: 60px;
  font-weight: 600;
  font-size: 17px;
  position: relative;
  overflow: hidden;
  cursor: pointer;
  transition: transform 0.1s ease;
}
.btn-sign:active {
  transform: translate(2px, 2px);
}
.btn-sign:hover {
  background-color: #bde01a;
  color: var(--color-bg-secondary);
  border-color: #bde01a;
}

.btn-sign:hover::before {
  animation: shine 1.5s ease-out infinite;
}

.btn-sign::before {
  content: "";
  position: absolute;
  left: -100px;
  top: 0;
  width: 100px;
  height: 100%;
  background: linear-gradient(
    90deg,
    rgba(255, 255, 255, 0) 30%,
    rgba(255, 255, 255, 0.8),
    rgba(255, 255, 255, 0) 70%
  );
  transform: skewX(-25deg);
  opacity: 0.6;

  left: 150%;
  transition: left 0.6s ease-in-out;
}
@keyframes shine {
  0% {
    left: -100px;
  }

  60% {
    left: 100%;
  }

  to {
    left: 100%;
  }
}

.fa-bell,
.fa-message,
.fa-bars {
  color: var(--color-text);
  font-size: 20px;
  cursor: pointer;
}
.fa-bell:hover,
.fa-message:hover,
.fa-bars:hover {
  color: var(--color-text-secondary);
}
.nav-divider {
  border: none;
  border-top: 1px solid var(--color-secondary);
  opacity: 1;
}
.navbar-brand-wrap {
  margin-right: auto;
}
.navbar-collapse span {
  color: var(--color-text);
}
/*endNavbar*/
/*startHeroSection*/
.d-lg-none {
  color: var(--color-text);
  text-align: justify;
  font-size: 14px;
  justify-content: start;
}

.btn-lime {
  position: relative;
  overflow: hidden;
  cursor: pointer;
  border-radius: 8px;
  transition: transform 0.1s ease;
  background-color: var(--color-text-secondary);
  border: 1px solid var(--color-text-secondary);
}
.btn-lime:active {
  transform: translate(2px, 2px);
}
.btn-lime:hover {
  background-color: #bde01a;

  border-color: #bde01a;
}

.btn-lime:hover::before {
  animation: shine 1.5s ease-out infinite;
}

.btn-lime::before {
  content: "";
  position: absolute;
  left: -100px;
  top: 0;
  width: 100px;
  height: 100%;
  background: linear-gradient(
    90deg,
    rgba(255, 255, 255, 0) 30%,
    rgba(255, 255, 255, 0.8),
    rgba(255, 255, 255, 0) 70%
  );
  transform: skewX(-25deg);
  opacity: 0.6;

  left: 150%;
  transition: left 0.6s ease-in-out;
}

@keyframes shine {
  0% {
    left: -100px;
  }

  60% {
    left: 100%;
  }

  to {
    left: 100%;
  }
}
/* Hero responsive fixes */
@media (max-width: 991.98px) {
  #hero {
    justify-content: center;
  }
  .container {
    margin-right: auto;
    height: auto;
    padding-top: 40px;
    padding-bottom: 60px;
  }
  .hero-section {
    text-align: center;
    padding: 0px 0 320px 0px;
  }
  .text-white {
    font-size: 40px;
  }

  .text-lime {
    font-size: 34px;
  }
  .neon-border-frame {
    width: 100%;
  }
  .floating-badge {
    bottom: 10px;
    left: 10px;
  }
}

@media (max-width: 575.98px) {
  .hero-section {
    text-align: center;

    padding: 20px 0 320px 60px;
  }

  .text-lime {
    font-size: 28px;
  }
  .hero-description {
    font-size: 14px;
  }
  .btn-lime,
  .btn-outline-lime {
    font-size: 14px;
    padding: 10px 16px;
  }
}

.image-wrapper {
  padding: 15px;
  width: 100%;
}
.hero-section {
  padding-top: 80px;
  background-image:
    linear-gradient(rgba(0, 0, 0, 0.89), rgba(0, 0, 0, 0.89)),
    url("images/hero-bg.jpg");

  background-attachment: fixed;
  background-position: center;
  background-size: cover;
  background-repeat: no-repeat;
}
.text-white {
  font-size: 60px;
  font-family: "Days One", sans-serif;
  font-weight: bold;
}
.text-lime {
  font-size: 50px;
  font-family: "Days One", sans-serif;
  color: var(--color-text-secondary);
}
.neon-border-frame {
  width: 110%;
  aspect-ratio: 2 / 1.3;
  padding: 4px;
  border-radius: 16px;
  background: linear-gradient(to right, rgb(203, 255, 31), rgb(25, 224, 115));
  overflow: hidden;
}
.hero-image {
  width: 100%;
  height: 100%;
  border-radius: 13px;
  display: block;
  object-fit: cover;
  filter: brightness(0.8) contrast(1.1);
}

.floating-badge {
  position: absolute;
  bottom: -10px;
  left: -10px;
  background-color: var(--color-bg);
  backdrop-filter: blur(10px);
  border: 1px solid rgb(77, 77, 78);
  color: var(--color-bg-secondary);
  padding: 10px 12px;
  border-radius: 12px;
  font-size: 15px;
}
.fa-trophy {
  color: var(--color-text-secondary);
  padding-left: 7px;
  font-size: 20px;
}
.hero-description {
  color: var(--color-text);
}
.hero-badge {
  padding: 15px 20px 10px 8px;
}
.number-white {
  color: var(--color-text);
}
.container {
  margin-right: 127px;
  height: 100vh;
}
/* ... */

